--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ sitemap:
 					<div id="intro">
             <h1>{{site.title}}</h1>
 						<h2>A Millennial Kid Blogging</h2>
-						<p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
+						<p>A blog to capture the jounery of my life after university</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
